syntax = "proto3";

package nyt;

message MostPopularResponse  {
    string status = 1;
    string copyright = 2;
    uint32 num_results = 3;
    repeated MostPopularResult results = 4;
}

message MostPopularResult  {
    string url = 1;
    uint64 id = 2;
    uint64 assset_id = 3;
    string adx_keywords = 4;
    string column = 5;
    string section = 6;
    string byline = 7;
    string type = 8;
    string title = 9;
    string abstract = 10;
    string published_date = 11;
    string source = 12;
    uint32 views = 13;
}
